...
                  {initials}
                </Text>
              </View>

              <View style={{ flex: 1 }}>
                <Text style={styles.greeting}>
                  Namaste,
                </Text>

                <Text style={styles.username} numberOfLines={1}>
                  {displayName}
                </Text>

...
